azuredeploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "string"
        },
        "adminPassword": {
            "type": "securestring"
        },
        "tableau_admin_username":{
            "type": "string"
        },
        "tableau_admin_password":{
            "type": "securestring"
        },
        "registration_first_name":{
            "type": "string"
        },
        "registration_last_name":{
            "type": "string"
        },
        "registration_email":{
            "type": "string"
        },
        "registration_company":{
            "type":"string"
        },
        "registration_title":{
            "type":"string"
        },
        "registration_department":{
            "type":"string"
        },
        "registration_industry":{
            "type":"string"
        },
        "registration_phone":{
            "type":"string"
        },
        "registration_city":{
            "type":"string"
        },
        "registration_state":{
            "type":"string"
        },
        "registration_zip":{
            "type":"string"
        },
        "registration_country":{
            "type":"string"
        },
        "is_trial":{
            "type": "bool"
        },
        "license_key":{
            "type": "string"
        }
    },
    "variables": {
        "publicIpAddressType" : "Static",
        "publicIpAddressSku" : "Standard",
        "virtualMachineSize": "Standard_D16_v3",
        "publicIpAddressName" : "tableau_server_IP",
        "subnetName": "tableau_server_SN",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', variables('subnetName'))]",
        "networkSecurityGroupName" : "tableau_server_NSG",
        "networkInterfaceName": "tableau_server_NI",
        "virtualNetworkName": "tableau_server_VN",
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
        "virtualMachineName": "TableauServerVM",
        "addressPrefix" : "10.0.0.0/16",
        "subnetAddressPrefix": "10.0.0.0/24",
        "enableDdosProtection": false
    },
    "resources": [
        {
            "apiVersion":"2018-02-01",
            "name": "[variables('virtualNetworkName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets" : [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetAddressPrefix')]"
                        }
                    }
                ],
                "enableDdosProtection": "[variables('enableDdosProtection')]"
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(variables('virtualMachineName'), '/', 'config-app')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                    "[concat('Microsoft.Compute/virtualMachines/', variables('virtualMachineName'))]"
                ],
            "tags": {
                "displayName": "config-app"
            },
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.9",
                "autoUpgradeMinorVersion": true,
                "settings" : {
                        "fileUris": [
                            "https://raw.githubusercontent.com/maddyloo/tableau-server-windows-1node/master/config_script.ps1"
                        ]
                    },
                "protectedSettings": {
                    "commandToExecute": "start-process powershell -verb runAs 'c://tabsetup//config_script.ps1 -ArgumentList admin, admin, jamie, data, jdata@tableau.com, tableau, pm, dev, tech, 8888888, seattle, wa, 98107, usa, key, true'",
                    "timestamp": 9876547676
                }
            }
        },
        {
            "name": "[variables('virtualMachineName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[variables('virtualMachineName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[variables('virtualMachineSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
                        }
                    ]
                }
            }
        },
        {
            "name": "[variables('networkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2016-09-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIpAddresses/', variables('publicIpAddressName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddressName'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "name": "[variables('publicIpAddressName')]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "2017-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIpAllocationMethod": "[variables('publicIpAddressType')]"
            },
            "sku": {
                "name": "[variables('publicIpAddressSku')]"
            }
        },
        {
            "name": "[variables('networkSecurityGroupName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-06-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    },
                    {
                        "name": "allow-80-traffic-inbound",
                        "properties":{
                            "priority": 1010,
                            "protocol": "*",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80"
                        }
                    },
                    {
                        "name": "allow-80-traffic-outbound",
                        "properties":{
                            "priority": 1010,
                            "protocol": "*",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {
        "adminUsername": {
            "type": "string",
            "value": "[parameters('adminUsername')]"
        },
        "Public IP": {
            "type": "string",
            "value": "output public ip??"
        }
    }
}
